Move the default table editable header to controls.

--- a/ui/controls/table-editable-header.reel/table-editable-header.html
+++ b/ui/controls/table-editable-header.reel/table-editable-header.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
-    <link rel="stylesheet" type="text/css" href="table-container-default-header.css">
+    <link rel="stylesheet" type="text/css" href="table-editable-header.css">
     <script type="text/montage-serialization">
     {
         "owner": {
@@ -35,7 +34,7 @@
     </script>
 </head>
 <body>
-    <div data-montage-id="owner" class="TableContainerDefaultHeader">
+    <div data-montage-id="owner">
         <div data-montage-id="deleteButton" class="Button--alert Button--icon"><svg><use xlink:href="#i-trashCan"/></svg></div>
         <div data-montage-id="addButton" class="Button--create Button--icon"><svg><use xlink:href="#i-plus"/></svg></div>
     </div>
