--- a/ui/sections/containers/controls/table-environment.reel/table-environment.html
+++ b/ui/sections/containers/controls/table-environment.reel/table-environment.html
@@ -33,7 +33,7 @@
         },
 
         "defaultHeader": {
-            "prototype": "../table-container-default-header.reel",
+            "prototype": "ui/controls/table-editable-header.reel",
             "properties": {
                 "element": {"#": "tableHeader"},
                 "table": {"@": "table"}
