removed stale old canDelete code

--- a/ui/sections/storage/inspectors/disk.reel/disk.html
+++ b/ui/sections/storage/inspectors/disk.reel/disk.html
@@ -61,8 +61,7 @@
                 "controller": {"@": "owner"}
             },
             "bindings": {
-                "context": {"<-": "@owner.context"},
-                "canDelete": {"<-": "!!@owner.object._canDelete"}
+                "context": {"<-": "@owner.context"}
             }
         },
         "name": {
