Initial commit for support kerberos realm.

--- a/ui/sections/accounts/inspectors/kerberos-keytab.reel/kerberos-keytab.html
+++ b/ui/sections/accounts/inspectors/kerberos-keytab.reel/kerberos-keytab.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
-    <link rel="stylesheet" type="text/css" href="kerberos-realm.css">
+    <link rel="stylesheet" type="text/css" href="kerberos-keytab.css">
     <script type="text/montage-serialization">
     {
         "owner": {
@@ -14,7 +13,7 @@
     </script>
 </head>
 <body>
-    <div data-montage-id="owner" class="KerberosRealm">
+    <div data-montage-id="owner" class="KerberosKeytab">
     </div>
 </body>
 </html>
