--- a/ui/sections/accounts/inspectors/kerberos-realm.reel/kerberos-realm.html
+++ b/ui/sections/accounts/inspectors/kerberos-realm.reel/kerberos-realm.html
@@ -29,7 +29,7 @@
             "bindings": {
                 "context": {"<-": "@owner.context"},
                 "canDelete": {"<-": "!@owner._isNew"},
-                "canDelete": {"<-": "!@owner._isNew"}
+                "canRevert": {"<-": "!@owner._isNew"}
             }
         },
 
