editable table for alert-filter

--- a/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-predicates.html
+++ b/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-predicates.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="table-port.css">
+    <link rel="stylesheet" type="text/css" href="table-predicates.css">
     <script type="text/montage-serialization">
     {
         "owner": {
@@ -18,13 +18,13 @@
                 "label": "Ports",
                 "columns":  [
                     {
-                        "value": "host port"
+                        "value": "type"
                     },
                     {
-                        "value": "container port"
+                        "value": "operator"
                     },
                     {
-                        "value": "protocol"
+                        "value": "value"
                     }
                 ]
             },
@@ -34,7 +34,7 @@
         },
 
         "defaultHeader": {
-            "prototype": "../table-container-default-header.reel",
+            "prototype": "./table-container-default-header.reel",
             "properties": {
                 "element": {"#": "tableHeader"},
                 "table": {"@": "table"}
