Fix lock of boot-environment row when activating

--- a/ui/sections/system/inspectors/boot-pool.reel/boot-environment-row.reel/boot-environment-row.html
+++ b/ui/sections/system/inspectors/boot-pool.reel/boot-environment-row.reel/boot-environment-row.html
@@ -10,7 +10,7 @@
                 "element": {"#": "owner"}
             },
             "bindings": {
-                "classList.has('has-loading-spinner')": {"<-": "@owner.object.isProcessing"}
+                "classList.has('has-loading-spinner')": {"<-": "!!@owner.object.promise"}
             }
         },
 
