--- a/ui/sections/system/inspectors/overview.reel/overview.html
+++ b/ui/sections/system/inspectors/overview.reel/overview.html
@@ -109,7 +109,7 @@
             "prototype": "blue-shark/ui/field-text.reel",
             "properties": {
                 "element": {"#": "totalContainers"},
-                "label": "Containers (runnging / total)"
+                "label": "Containers (running / total)"
             },
             "bindings": {
                 "value": {"<-": "@owner.containers.filter{running == true}.length + '/' + @owner.containers.length"}
