UPDATED: fix dropdown list missing

--- a/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-row-port.reel/table-row-port.html
+++ b/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-row-port.reel/table-row-port.html
@@ -107,7 +107,7 @@
             }
         },
         "classValues": {
-            "prototype": "blue-shark/ui/field-select.reel",
+            "prototype": "blue-shark/ui/select.reel",
             "properties": {
                 "element": {"#": "classValues"}
             },
@@ -117,7 +117,7 @@
             }
         },
         "severityValues": {
-            "prototype": "blue-shark/ui/field-select.reel",
+            "prototype": "blue-shark/ui/select.reel",
             "properties": {
                 "element": {"#": "severityValues"}
             },
