--- a/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-predicates.html
+++ b/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-predicates.html
@@ -18,7 +18,7 @@
                 "label": "Ports",
                 "columns":  [
                     {
-                        "value": "type"
+                        "value": "property"
                     },
                     {
                         "value": "operator"
@@ -29,7 +29,7 @@
                 ]
             },
             "bindings": {
-                "rows": {"<->": "@owner.values"}
+                "rows": {"<->": "@owner.rows"}
             }
         },
 
