--- a/ui/sections/storage/inspectors/volume-dataset.reel/volume-dataset.html
+++ b/ui/sections/storage/inspectors/volume-dataset.reel/volume-dataset.html
@@ -128,6 +128,24 @@
                 "object": {"<-": "@owner.snapshots.filter{dataset == @owner.object.id}"},
                 "objectType": {"<-": "@owner.snapshotType"}
             }
+        },
+        "typeCondition": {
+            "prototype": "montage/ui/condition.reel",
+            "properties": {
+                "element": {"#": "typeCondition"}
+            },
+            "bindings": {
+                "condition": {"<-": "@owner.object.type == 'FILESYSTEM'"}
+            }
+        },
+        "permissions": {
+            "prototype": "./volume-dataset-permissions.reel",
+            "properties": {
+                "element": {"#": "permissions"}
+            },
+            "bindings": {
+                "object": {"<->": "@owner.object"}
+            }
         }
     }
     </script>
@@ -144,6 +162,9 @@
             </div>
             <div data-montage-id="typeSelector"></div>
             <div data-montage-id="settings"></div>
+            <div data-montage-id="typeCondition">
+                <div data-montage-id="permissions"></div>
+            </div>
             <div data-montage-id="createdCondition">
                 <div data-montage-id="snapshots"></div>
             </div>
