replaces deprecated helper styles

--- a/ui/sections/storage/inspectors/detached-volume.reel/detached-volume.html
+++ b/ui/sections/storage/inspectors/detached-volume.reel/detached-volume.html
@@ -69,7 +69,7 @@
             <div data-montage-id="volumeIcon" class="DetachedVolume-header-icon"></div>
         </div>
         <div data-montage-id="inspector">
-            <div class="g-negative-margin-sides">
+            <div class="g-margin-h--subbtract">
                 <div data-montage-id="topology" class="g-negative-margin-top"></div>
             </div>
             <div data-montage-id="import" data-arg="footer-additional-button" class="ImportButton"></div>
