--- a/ui/sections/storage/inspectors/encrypted-volume-importer.reel/encrypted-volume-importer.html
+++ b/ui/sections/storage/inspectors/encrypted-volume-importer.reel/encrypted-volume-importer.html
@@ -92,7 +92,7 @@
     <div data-montage-id="owner" class="EncryptedVolumeImporter has-availableDisks">
         <div data-montage-id="inspector">
             <div class="EncryptedVolumeImporter-content">
-                <div class="g-margin-sides g-padding-top">
+                <div class="g-margin-h g-padding-top">
                     <div data-montage-id="name"></div>
                     <div data-montage-id="password"></div>
                     <div data-montage-id="key"></div>
