--- a/ui/sections/storage/inspectors/volume-creator.reel/volume-creator.html
+++ b/ui/sections/storage/inspectors/volume-creator.reel/volume-creator.html
@@ -49,7 +49,7 @@
                 "value": {"<->": "@owner.object.id"}
             }
         },
-        
+
         "encryption": {
             "prototype": "blue-shark/ui/field-checkbox.reel",
             "properties": {
@@ -144,7 +144,7 @@
     <div data-montage-id="owner" class="VolumeCreator">
         <div data-montage-id="inspector">
             <div class="VolumeCreator-content">
-                <div class="g-margin-sides g-padding-top">
+                <div class="g-margin-h g-padding-top">
                     <div data-montage-id="name"></div>
                     <div data-montage-id="encryption"></div>
                     <div data-montage-id="encryptionOptions">
